# m2_kiosk_web

./: .gitignore  config_template.json  create_deb_package.sh  m2_kiosk_web_config.json  main.py  meson.build  wsgi.py
DEBIAN/: control  postinst  postrm
etc/nginx/sites-available/: m2paypad-only-http.conf  m2paypad.conf
etc/nginx/snippets/: ssl-params.conf
etc/ssl/certs/: nginx-selfsigned.crt
etc/ssl/private/: dhparam.pem  nginx-selfsigned.key
nginx/: m2paypad.conf
static/css/: file_select.css  pos.css
static/js/: config_script.js  darkmode.js  payment_script.js  polling.js  polling2.js  script.js  script.js.bak
systemd/: m2paypad.service
templates/: _config.html  _navigation.html  _numpad.html  base.html  config.html  index.html  loyalty.html
